# victor-devops

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_devops_capabilities.py  test_devops_capability_config_service.py  test_devops_handlers.py  test_safety.py
tests/contract/: test_plugin_contract.py  test_sdk_boundary_contract.py
victor_devops/: __init__.py  assistant.py  capabilities.py  conversation_enhanced.py  enrichment.py  escape_hatches.py  handlers.py  mode_config.py  plugin.py  prompts.py  protocols.py  safety.py  safety_enhanced.py  tool_dependencies.py  tool_dependencies.yaml  victor-vertical.toml
victor_devops/rl/: __init__.py
victor_devops/teams/: __init__.py  personas.py
victor_devops/workflows/: __init__.py  container_setup.yaml  deploy.yaml
