[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "victor-devops"
version = "0.5.7"
description = "DevOps vertical for Victor AI - Infrastructure automation, CI/CD, and cloud operations"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
maintainers = [
    { name = "Vijaykumar Singh", email = "singhvjd@gmail.com" },
]
keywords = [
    "victor",
    "vertical",
    "devops",
    "infrastructure",
    "ci-cd",
    "docker",
    "kubernetes",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "victor-ai>=0.5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black==26.1.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/vjsingh1984/victor-devops"
Repository = "https://github.com/vjsingh1984/victor-devops"
Documentation = "https://docs.victor.dev/verticals/devops"
Issues = "https://github.com/vjsingh1984/victor-devops/issues"

[project.entry-points."victor.verticals"]
devops = "victor_devops.assistant:DevOpsAssistant"

[project.entry-points."victor.tool_dependencies"]
devops = "victor_devops.tool_dependencies:get_provider"

[project.entry-points."victor.safety_rules"]
devops = "victor_devops.safety:create_all_devops_safety_rules"

[tool.setuptools]
packages = [
    "victor_devops",
    "victor_devops.rl",
    "victor_devops.teams",
    "victor_devops.workflows",
]

[tool.black]
line-length = 100
target-version = [
    "py310",
    "py311",
    "py312",
]

[tool.ruff]
line-length = 100
select = [
    "E",
    "W",
    "F",
    "B",
    "C4",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
